--- a/app/includes/modals/default.html
+++ b/app/includes/modals/default.html
@@ -1,5 +1,5 @@
 
-<div class="vmodal vmodal_default vmodal_center" id="vmodalText">
+<div class="vmodal vmodal_default vmodal_center" id="vmodalForm">
   <div class="vmodal__box">
     <button class="vmodal__close" type="button" data-close="vmodal">&times;</button>
     <p class="vmodal__title">Отправить заявку</p>
