--- a/app/includes/modals/default.pug
+++ b/app/includes/modals/default.pug
@@ -1,4 +1,4 @@
-.vmodal.vmodal_default.vmodal_center#vmodalText
+.vmodal.vmodal_default.vmodal_center#vmodalForm
 	.vmodal__box
 		button(type="button" class="vmodal__close" data-close="vmodal") &times;
 		p.vmodal__title Отправить заявку
