--- a/app/includes/nav.html
+++ b/app/includes/nav.html
@@ -1,6 +1,6 @@
 
-<div class="vrow flex-v-center">
-  <div class="vak xs-8 md-3">
+<div class="vrow flex-v-center vnav__row">
+  <div class="vak xs-8 md-2">
     <div class="vnav__logo">
       <button class="vnav__btn" type="button" data-menu=".vnav_fixed .vnav__menu"><span class="vnav__btn-lines"><span></span><span></span><span></span></span>
         <!--span.vnav__btn-text Menu-->
@@ -8,15 +8,13 @@
       <div class="d-i"><img src="img/logo.png" alt=""/></div>
     </div>
   </div>
-  <nav class="vnav__menu vak xs-12 md-6">
-    <ul>
-      <li class="vnav__item vnav__item_active"><a class="vnav__link" href="#sec1">Главная</a></li>
-      <li class="vnav__item"><a class="vnav__link" href="#sec2">item_2</a></li>
-      <li class="vnav__item"><a class="vnav__link" href="#sec3">item_3</a></li>
+  <nav class="vak xs-12 md-6 vnav__menu">
+    <ul class="vnav__list">
+      <li class="vnav__item"><a class="vnav__link" target="_blank" href="http://adventuretours.in.ua/">home</a></li>
+      <li class="vnav__item"><a class="vnav__link" target="_blank" href="http://adventuretours.in.ua/index-services.html#main">Our service</a></li>
+      <li class="vnav__item"><a class="vnav__link" target="_blank" href="http://adventuretours.in.ua/index-tour-video.html#main">tour video</a></li>
+      <li class="vnav__item"><a class="vnav__link" target="_blank" href="http://adventuretours.in.ua/index-chernobyl-tour.html#main">chernobyl</a></li>
+      <li class="vnav__item"><a class="vnav__link" target="_blank" href="http://adventuretours.in.ua/index-shooting-tour.html#main">shooting tour</a></li>
     </ul>
   </nav>
-  <div class="vak xs-4 md-3 vnav__text">
-    <div class="vnav__text-toggle js-vnav-toggle"><span></span><span></span><span></span></div>
-    <div class="vnav__text-links js-vnav-links"><a class="vnav__text-links-inner">+38 (093) 961 33 54</a><a class="vnav__text-links-inner vnav__text-links-inner_hidden">+38 (093) 961 33 54</a></div>
-  </div>
 </div>
