--- a/app/sass/dev/_text.scss
+++ b/app/sass/dev/_text.scss
@@ -1,30 +1,23 @@
 .vtitle{
-	margin-bottom: 60px;
-	line-height: 1;
-	font-size: 40px;
-	@include fs('vtitle');
-	@extend .text-center;
-	@extend .text-tu;
-	@extend .light;
 	&-small{
 		margin: 12px 0;
 		font-size: 17px;
-		@include fs('vtitle-small');	
+		//@include fs('vtitle-small');	
 	}
 	&-big{
-		line-height: 1.1;
-		font-size: 48px;
-		margin: 24px 0;
+		line-height: 1.2;
+		font-size: 25px;
+		margin: 0 0 24px 0;
+		@extend .light;
 		@include fs('vtitle-big');
-		@extend .bold;
-	}
-	@include resp-min(sm){
-		&-big{
-			margin-bottom: 60px;
+		&_offset{
+			margin: 0 0 48px 0;
 		}
 	}
-	@include resp-min(md){
-		margin-bottom: 75px;
+}
+.color{
+	&-white{
+		color: setColor(white);
 	}
 }
 .text{
