--- a/app/includes/head.html
+++ b/app/includes/head.html
@@ -3,5 +3,6 @@
 <meta charset="UTF-8"/><!--[if lte IE 9]>
 <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
 <link rel="stylesheet" href="css/style.css"/>
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,700,900&amp;amp;subset=cyrillic"/>
 <script src="js/scripts.min.js"></script>
 <script src="js/main.js"></script>
