--- a/app/includes/head.pug
+++ b/app/includes/head.pug
@@ -4,6 +4,8 @@ meta(charset="UTF-8")
 	script(src="http://html5shiv.googlecode.com/svn/trunk/html5.js")
 <![endif]-->
 link(rel="stylesheet" href="css/style.css")
+link(rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,700,900&amp;subset=cyrillic")
 script(src="js/scripts.min.js")
 script(src="js/main.js")
+
 //- script(src="js/main_vanilla.js")
