--- a/app/includes/layout.html
+++ b/app/includes/layout.html
@@ -7,6 +7,7 @@
     <meta charset="UTF-8"><!--[if lte IE 9]>
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,700,900&amp;amp;subset=cyrillic">
     <script src="js/scripts.min.js"></script>
     <script src="js/main.js"></script>
   </head>
@@ -18,8 +19,8 @@
     <!-- 	+e.section._right-->
     <div class="vnav vnav_fixed">
       <div class="vcontainer vnav__container">
-        <div class="vrow flex-v-center">
-          <div class="vak xs-8 md-3">
+        <div class="vrow flex-v-center vnav__row">
+          <div class="vak xs-8 md-2">
             <div class="vnav__logo">
               <button class="vnav__btn" type="button" data-menu=".vnav_fixed .vnav__menu"><span class="vnav__btn-lines"><span></span><span></span><span></span></span>
                 <!--span.vnav__btn-text Menu-->
@@ -27,17 +28,15 @@
               <div class="d-i"><img src="img/logo.png" alt=""></div>
             </div>
           </div>
-          <nav class="vnav__menu vak xs-12 md-6">
-            <ul>
-                      <li class="vnav__item vnav__item_active"><a class="vnav__link" href="#sec1">Главная</a></li>
-                      <li class="vnav__item"><a class="vnav__link" href="#sec2">item_2</a></li>
-                      <li class="vnav__item"><a class="vnav__link" href="#sec3">item_3</a></li>
+          <nav class="vak xs-12 md-6 vnav__menu">
+            <ul class="vnav__list">
+                      <li class="vnav__item"><a class="vnav__link" target="_blank" href="http://adventuretours.in.ua/">home</a></li>
+                      <li class="vnav__item"><a class="vnav__link" target="_blank" href="http://adventuretours.in.ua/index-services.html#main">Our service</a></li>
+                      <li class="vnav__item"><a class="vnav__link" target="_blank" href="http://adventuretours.in.ua/index-tour-video.html#main">tour video</a></li>
+                      <li class="vnav__item"><a class="vnav__link" target="_blank" href="http://adventuretours.in.ua/index-chernobyl-tour.html#main">chernobyl</a></li>
+                      <li class="vnav__item"><a class="vnav__link" target="_blank" href="http://adventuretours.in.ua/index-shooting-tour.html#main">shooting tour</a></li>
             </ul>
           </nav>
-          <div class="vak xs-4 md-3 vnav__text">
-            <div class="vnav__text-toggle js-vnav-toggle"><span></span><span></span><span></span></div>
-            <div class="vnav__text-links js-vnav-links"><a class="vnav__text-links-inner">+38 (093) 961 33 54</a><a class="vnav__text-links-inner vnav__text-links-inner_hidden">+38 (093) 961 33 54</a></div>
-          </div>
         </div>
       </div>
     </div>
