--- a/app/sass/components/_buttons.scss
+++ b/app/sass/components/_buttons.scss
@@ -1,13 +1,16 @@
 .vbtn {
-  min-width: 200px;
+  min-width: 210px;
+  
   max-width: 100%;
-  padding: 20px 25px;
+  padding: 16px 25px;
   overflow: hidden;
   border: none;
-  border-radius: 3px;
+  border-radius: 2px;
   z-index: z('default');
-  font-size: 18px;
+  font-size: 12px;
+  text-transform: uppercase;
   transform: translateZ(0);
+  text-align: center;
   @extend .relative;
   @extend .d-i;
   @extend .text-dn;
@@ -20,10 +23,10 @@
     @extend .pseudo;
     @extend .transition;
   }
-  @include resp-min(xs){
-    font-size: 18px;
-    padding: 30px;
-  } 
+  &_big{
+    min-width: 240px;
+    padding: 23px 25px;
+  }
   &_skew{
     &:before{
       width: 100%;
@@ -106,10 +109,29 @@
       }
     }
   }
-  &_main{
-    background-color: setColor(main);
+  &_dark{
+    color: setColor(dark);
+    background-color: setColor(dark, light);
     &:before{
-      background-color: lighten(setColor(main), 15%);
+      background-color: darken(setColor(dark, light), 15%);
+    }
+  }
+  &_border{
+    background-color: transparent;
+    border-width: 1px;
+    border-style: solid;
+    color: #fff;
+    &_strong{
+      border-color: setColor(main);
+      &:before{
+        background-color: setColor(main);
+      }
+    }
+    &_opacity{
+      border-color: transparentize(setColor(main), 0.8);
+      &:before{
+        background-color: transparentize(setColor(main), 0.8);
+      }
     }
   }
   &_single{
