--- a/app/sass/helpers/_variables.scss
+++ b/app/sass/helpers/_variables.scss
@@ -1,6 +1,6 @@
 // Colors
-	$color-main: #66fcf1;
-	$color-responsive-menu: #a5a5a5;
+	$color-main: #ffc734;
+	$color-responsive-menu: #3c3737;
 	$color-modal-main: #ED2553;
 	$color-modal-trans: rgba(0, 0, 0, 0.1);
 
