--- a/app/sass/layouts/_header.scss
+++ b/app/sass/layouts/_header.scss
@@ -1,8 +1,56 @@
-.vheader {
+.vheader{
 	@extend .relative;
 	min-height: 50px;
 	z-index: z('default');
 	color: #fff;
-	padding: 50px 0;
-	background-color: #ddd;
+	padding: 50px 0 50px;
+	background-color: #272727;
+	overflow: hidden;
+	&__video{
+		position: absolute;
+		left: 0;
+		top: 0;
+		width: 100%;
+		//height: 100%;
+		z-index: -1;
+		&:after{
+			@extend .pseudo;
+			left: 0;
+			top: 0;
+			width: 100%;
+			height: 100%;
+			background-color: rgba(0, 0, 0, 0.5);
+		}
+		// &-inner{
+		// 	width: 100%;
+		// }
+	}
+	@include resp-max(sm){
+		&__text{
+			text-align: center;
+			margin-bottom: 30px;
+		}
+		&__title{
+			font-size: 35px;
+		}
+	}
+	@include resp-min(sm){
+		padding-top: 150px;
+		padding-bottom: 150px;
+	}
+	@include resp-min(md){
+		padding-top: 200px;
+		padding-bottom: 200px;
+		&__image{
+			position: absolute;
+		}
+	}
+	@include resp-min(lg){
+		padding-top: 320px;
+		padding-bottom: 320px;
+		&__image{
+			right: 74px;
+			top: -63px;
+		}
+	}
 }
